Fix SideBar button group overflow

--- a/my-app/src/styles/Sidebar.css
+++ b/my-app/src/styles/Sidebar.css
@@ -49,7 +49,7 @@
 }
 
 .side-bar-top-group{
-    overflow: scroll;
+    overflow: auto;
     min-height: 0;
     display: flex;
     flex-direction: column;
